--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,7 @@
   border: 1px solid black;
   margin: 0 auto;
   margin-top: 30px;
+  margin-bottom: 100px;
 }
 .data_container > p {
   height: 20px;
